[build] Enable building cairo-trace on Solaris.
Solaris supports LD_PRELOAD too!

--- a/configure.ac
+++ b/configure.ac
@@ -636,7 +636,7 @@ dnl The tracing utility requires LD_PRELOAD, so only build it for systems
 dnl that are known to work.
 
 case $host in
-*-linux*|*-*bsd*)
+*-linux*|*-*bsd*|*-solaris*)
 	have_ld_preload="yes"
 	;;
 *)
