[test] Exercise push-group-color.
Hunting for a known bug in the xlib backend where it invalidly converts
an argb32 source to rgb24. However, this does not appear to be that bug,
but still a useful exercise nevertheless.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -759,6 +759,8 @@ REFERENCE_IMAGES = \
 	push-group.rgb24.ref.png \
 	push-group.xlib.ref.png \
 	push-group.xlib.rgb24.ref.png \
+	push-group-color.ref.png \
+	push-group-color.xlib.ref.png \
 	quartz-surface-source.ps2.ref.png \
 	quartz-surface-source.ps3.ref.png \
 	quartz-surface-source.ref.png \
