--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -156,6 +156,7 @@ test_sources = \
 	pixman-rotate.c					\
 	png.c						\
 	push-group.c					\
+	push-group-color.c				\
 	radial-gradient.c				\
 	random-intersections-eo.c			\
 	random-intersections-nonzero.c			\
