--- a/configure.ac
+++ b/configure.ac
@@ -485,7 +485,13 @@ AC_ARG_ENABLE(pthread,
 
 have_pthread=no
 if test "x$use_pthread" != "xno"; then
-  AC_CHECK_HEADERS([pthread.h], have_pthread=yes, have_pthread=no)
+  pthread_REQUIRES="pthread-stubs"
+  PKG_CHECK_MODULES(pthread, $pthread_REQUIRES,
+		    [use_pthread=yes; have_pthread=yes],
+		    [AC_CHECK_HEADERS([pthread.h], [use_pthread=yes; have_pthread=yes], [use_pthread="no (requires $pthread_REQUIRES)"])])
+  if test "x$have_pthread" = "xyes"; then
+    AC_DEFINE([CAIRO_HAS_PTHREAD], 1, [Define to 1 if we have pthread support])
+  fi
 fi
 AM_CONDITIONAL(HAVE_PTHREAD, test "x$have_pthread" = "xyes")
 if test "x$have_pthread" = xno -a "x$use_pthread" = xyes; then
