--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -15,6 +15,7 @@ test_sources = \
 	clear.c						\
 	clip-all.c					\
 	clip-disjoint.c					\
+	clip-device-offset.c				\
 	clip-empty.c					\
 	clip-fill.c					\
 	clip-fill-rule.c				\
