--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -159,6 +159,7 @@ test_sources = \
 	push-group.c					\
 	push-group-color.c				\
 	radial-gradient.c				\
+	radial-gradient-source.c			\
 	random-intersections-eo.c			\
 	random-intersections-nonzero.c			\
 	random-intersections-curves-eo.c		\
