[test] Update rotate-image-surface-paint
Update this test case so the background is not the default border colour
so that we spot when the backend pads out the transformed image surface.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -816,11 +816,10 @@ REFERENCE_IMAGES = \
 	rel-path.rgb24.ref.png \
 	rgb24-ignore-alpha.ref.png \
 	rotate-image-surface-paint.pdf.xfail.png \
-	rotate-image-surface-paint.ps2.ref.png \
-	rotate-image-surface-paint.ps3.ref.png \
+	rotate-image-surface-paint.ps.ref.png \
 	rotate-image-surface-paint.quartz.ref.png \
 	rotate-image-surface-paint.ref.png \
-	rotate-image-surface-paint.svg.ref.png \
+	rotate-image-surface-paint.svg.xfail.png \
 	rotated-clip.ref.png \
 	rotated-clip.ps.ref.png \
 	rotated-clip.xlib.ref.png \
