--- a/src/Makefile.win32.features
+++ b/src/Makefile.win32.features
@@ -428,13 +428,13 @@ enabled_cairo_headers += $(cairo_image_headers)
 enabled_cairo_private += $(cairo_image_private)
 enabled_cairo_sources += $(cairo_image_sources)
 
-supported_cairo_headers += $(cairo_meta_headers)
-all_cairo_headers += $(cairo_meta_headers)
-all_cairo_private += $(cairo_meta_private)
-all_cairo_sources += $(cairo_meta_sources)
-enabled_cairo_headers += $(cairo_meta_headers)
-enabled_cairo_private += $(cairo_meta_private)
-enabled_cairo_sources += $(cairo_meta_sources)
+supported_cairo_headers += $(cairo_recording_headers)
+all_cairo_headers += $(cairo_recording_headers)
+all_cairo_private += $(cairo_recording_private)
+all_cairo_sources += $(cairo_recording_sources)
+enabled_cairo_headers += $(cairo_recording_headers)
+enabled_cairo_private += $(cairo_recording_private)
+enabled_cairo_sources += $(cairo_recording_sources)
 
 supported_cairo_headers += $(cairo_tee_headers)
 all_cairo_headers += $(cairo_tee_headers)
