sphinx: Add required pthread libs
Try again, this time for real hopefully.

--- a/util/cairo-sphinx/Makefile.am
+++ b/util/cairo-sphinx/Makefile.am
@@ -16,7 +16,7 @@ cairo_sphinx_la_LIBADD = -ldl
 
 cairo_sphinx_SOURCES = sphinx.c
 cairo_sphinx_CPPFLAGS = $(AM_CPPFLAGS) -DLIBDIR="\"$(cairolibdir)\""
-cairo_sphinx_CFLAGS = $(REAL_PTHREAD_CFLAGS) $(CAIRO_CFLAGS) $(glib_CFLAGS)
+cairo_sphinx_CFLAGS = $(real_pthread_CFLAGS) $(CAIRO_CFLAGS) $(glib_CFLAGS)
 cairo_sphinx_LDADD = \
         $(top_builddir)/util/cairo-script/libcairo-script-interpreter.la \
         $(top_builddir)/boilerplate/libcairoboilerplate.la	\
@@ -24,7 +24,7 @@ cairo_sphinx_LDADD = \
 	$(glib_LIBS) 						\
 	$(CAIRO_LDADD)						\
 	-lrt							\
-	$(REAL_PTHREAD_LIBS)
+	$(real_pthread_LIBS)
 cairo_sphinx_DEPENDENCIES = \
         $(top_builddir)/util/cairo-script/libcairo-script-interpreter.la \
         $(top_builddir)/boilerplate/libcairoboilerplate.la	\
