[test] Add new test checking is_clear is handled properly
This test does various operations with a clear source surface with
various content types.
The idea is to make sure optimizations done when surface->is_clear ==
TRUE only happen in the proper cases.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -13,6 +13,7 @@ test_sources = \
 	caps-joins-curve.c				\
 	caps-sub-paths.c				\
 	clear.c						\
+	clear-source.c					\
 	clip-all.c					\
 	clip-disjoint.c					\
 	clip-device-offset.c				\
