[test] Add pthread-same-source test
Multiple threads render using the same source surface, but with
different extend and filter.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -245,6 +245,7 @@ test_sources = \
 	zero-alpha.c
 
 pthread_test_sources =					\
+	pthread-same-source.c				\
 	pthread-show-text.c				\
 	pthread-similar.c				\
 	$(NULL)
