test: Add path-stroke-twice
Exercises a bug found by alois@astro.ch, whereby we inadvertently remove
a line segment when the path doubles back upon itself.

  Bug 26010 - cairo_line_to optimizes away path segments
  http://bugs.freedesktop.org/show_bug.cgi?id=26010

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -757,6 +757,8 @@ REFERENCE_IMAGES = \
 	pass-through.rgb24.ref.png \
 	path-append.ps.ref.png \
 	path-append.ref.png \
+	path-stroke-twice.ref.png \
+	path-stroke-twice.ps.ref.png \
 	path-append.test-fallback.ref.png \
 	path-append.xlib-fallback.ref.png \
 	path-append.xlib.ref.png \
