test: Add linear-uniform
Jeff reported a regression found by Mozilla whereby a uniform gradient
was not being premultiplied on conversion to a solid pattern.

  https://bugzilla.mozilla.org/show_bug.cgi?id=539165
  [Bug 539165] gradients with a single stop do not have their color
               multiplied by the alpha.

--- a/test/Makefile.sources
+++ b/test/Makefile.sources
@@ -126,6 +126,7 @@ test_sources = \
 	line-width-zero.c				\
 	linear-gradient.c				\
 	linear-gradient-reflect.c			\
+	linear-uniform.c				\
 	long-dashed-lines.c				\
 	long-lines.c					\
 	mask.c						\
