--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -91,6 +91,7 @@ cairo_private = \
 	cairo-surface-clipper-private.h \
 	cairo-surface-offset-private.h \
 	cairo-surface-subsurface-private.h \
+	cairo-surface-snapshot-private.h \
 	cairo-surface-wrapper-private.h \
 	cairo-tee-surface-private.h \
 	cairo-types-private.h \
@@ -153,6 +154,7 @@ cairo_sources = \
 	cairo-surface-fallback.c \
 	cairo-surface-clipper.c \
 	cairo-surface-offset.c \
+	cairo-surface-snapshot.c \
 	cairo-surface-subsurface.c \
 	cairo-surface-wrapper.c \
 	cairo-system.c \
