Alter definition of cairo_composite_rectangles_t
This is a more useful definition that is able to individually track the
rectangles that compose the composite operation. This will be used by
the specialist compositors as a means to perform the common extents
determination for an operation.

--- a/src/Makefile.sources
+++ b/src/Makefile.sources
@@ -59,6 +59,7 @@ cairo_private = \
 	cairo-clip-private.h \
 	cairo-combsort-private.h \
 	cairo-compiler-private.h \
+	cairo-composite-rectangles-private.h \
 	cairo-device-private.h \
 	cairo-error-private.h \
 	cairo-fixed-private.h \
@@ -114,6 +115,7 @@ cairo_sources = \
 	cairo-cache.c \
 	cairo-clip.c \
 	cairo-color.c \
+	cairo-composite-rectangles.c \
 	cairo-debug.c \
 	cairo-device.c \
 	cairo-fixed.c \
